--- a/nodes/MCAMAINBRANCH-STG_CUSTOMER.yml
+++ b/nodes/MCAMAINBRANCH-STG_CUSTOMER.yml
@@ -9,7 +9,7 @@ steps:
         truncateBefore: true
       database: ""
       deployEnabled: true
-      description: Customer data as defined by TPC-H
+      description: Description1
       isMultisource: false
       locationName: MCAMAINBRANCH
       materializationType: table
